--- a/files/virtualhost.conf
+++ b/files/virtualhost.conf
@@ -1,11 +1,10 @@
 <Virtualhost *:80>
-    ServerName www.toDo.com
-    ServerAdmin web@toDo.com
-    DocumentRoot /var/www/todo/html
-    <Directory /var/www/todo/html
-        AllowOverride none
-        Options Indexes FollowSymLinks
-        Requiere all granted
-    </Directory>
-</Virtualhost>
-
+  ServerName www.todo.com
+  ServerAdmin web@todo.com
+  DocumentRoot /var/www/todo/html
+  <Directory /var/www/todo/html>
+  AllowOverride none
+  Options Indexes FollowSymLinks
+  Require all granted
+ </Directory>
+</VirtualHost>
