Conclusion final y arreglos generales de los playbooks

--- a/inventory/servidores.toml
+++ b/inventory/servidores.toml
@@ -5,7 +5,7 @@ server01        ansible_host=192.168.56.110
 server02        ansible_host=192.168.56.111
 
 [database]
-server02
+server02        ansible_host=192.168.56.111  
 
 [linux:children] 
 centos
